--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shbin's Portfolio</title>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-HLJTRT0W81"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-HLJTRT0W81');
+    </script>
   </head>
   <body>
     <div id="root"></div>
