--- a/index.html
+++ b/index.html
@@ -2,15 +2,77 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="apple-touch-icon" href="/favicon.svg" />
+
+    <!-- PWA Manifest -->
+    <link rel="manifest" href="/manifest.json" />
+
+    <!-- Primary Meta Tags -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Shibin - Full Stack Developer | Python & React Portfolio</title>
+    <meta
+      name="title"
+      content="Shibin - Full Stack Developer | Python & React Portfolio"
+    />
+    <meta
+      name="description"
+      content="Full-stack developer specializing in Python, Django, React, and modern web technologies. View my portfolio featuring e-commerce platforms, social media apps, and AI-powered applications."
+    />
+    <meta
+      name="keywords"
+      content="Shibin, Full Stack Developer, Python Developer, React Developer, Django, Web Development, Portfolio, BCA Graduate, Calicut University, Technovalley, Software Engineer"
+    />
+    <meta name="author" content="Shibin" />
+    <meta name="robots" content="index, follow" />
+    <meta name="language" content="English" />
+    <meta name="theme-color" content="#000000" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://shibinshibi.vercel.app/" />
+    <meta
+      property="og:title"
+      content="Shibin - Full Stack Developer | Python & React Portfolio"
+    />
+    <meta
+      property="og:description"
+      content="Full-stack developer specializing in Python, Django, React, and modern web technologies. View my portfolio featuring e-commerce platforms, social media apps, and AI-powered applications."
+    />
+    <meta
+      property="og:image"
+      content="https://shibinshibi.vercel.app/og-image.jpg"
+    />
+    <meta property="og:site_name" content="Shibin's Portfolio" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://shibinshibi.vercel.app/" />
+    <meta
+      property="twitter:title"
+      content="Shibin - Full Stack Developer | Python & React Portfolio"
+    />
+    <meta
+      property="twitter:description"
+      content="Full-stack developer specializing in Python, Django, React, and modern web technologies. View my portfolio featuring e-commerce platforms, social media apps, and AI-powered applications."
+    />
+    <meta
+      property="twitter:image"
+      content="https://shibinshibi.vercel.app/twitter-image.jpg"
+    />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://shibinshibi.vercel.app/" />
+
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Google+Sans+Code:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Shbin's Portfolio</title>
     <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-HLJTRT0W81"
@@ -23,6 +85,39 @@
       gtag("js", new Date());
 
       gtag("config", "G-HLJTRT0W81");
+    </script>
+
+    <!-- Structured Data (JSON-LD) -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Shibin",
+        "url": "https://shibinshibi.vercel.app",
+        "jobTitle": "Full Stack Developer",
+        "description": "Full-stack developer specializing in Python, Django, React, and modern web technologies",
+        "alumniOf": {
+          "@type": "EducationalOrganization",
+          "name": "Calicut University",
+          "degree": "Bachelor of Computer Application (BCA)"
+        },
+        "knowsAbout": [
+          "Python",
+          "Django",
+          "React",
+          "JavaScript",
+          "Web Development",
+          "REST API",
+          "Database Management",
+          "Full Stack Development"
+        ],
+        "sameAs": [
+          "https://www.linkedin.com/in/shibin-shibi-a783a32b7",
+          "https://github.com/shibinshibii"
+        ],
+        "email": "shibi393493@gmail.com",
+        "telephone": "+91 9061393493"
+      }
     </script>
   </head>
   <body>
